# Keccak_Troika_Benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  binary_keccak.c  build_iota.sh  ternary_troika.c
